--- a/src/main/webapp/index.css
+++ b/src/main/webapp/index.css
@@ -13,7 +13,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-
+  transition: linear all 1s;
 }
 
 .wrap {
