Give city information for recommend cities.

--- a/src/main/webapp/result.css
+++ b/src/main/webapp/result.css
@@ -51,6 +51,7 @@ section> .resultTitle {
 .resultDetails>.name {
   font-weight: 600;
   color: #004990;
+  cursor:pointer;
 }
 
 .resultDetails>.address, .resultDetails>.rating {
