--- a/src/main/webapp/index.css
+++ b/src/main/webapp/index.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins");
 @import url('https://fonts.googleapis.com/css?family=Lobster');
-
 * {
   margin: 0px;
   padding: 0px;
@@ -18,20 +17,20 @@ body {
 
 .wrap {
   width: 100%;
- height:100vh;
+  height: 100vh;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
   display: flex;
-/*   flex-wrap: wrap; */
+  /*   flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
-
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
+
 .container {
   position: relative;
   border: 1px solid black;
@@ -41,6 +40,7 @@ body {
   font-family: "Poppins", sans-serif;
   overflow: hidden;
 }
+
 .container .background {
   position: absolute;
   z-index: -1;
@@ -55,8 +55,8 @@ body {
 }
 
 .logoDiv {
-  width:100%;
-  display:flex;
+  width: 100%;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -68,8 +68,8 @@ body {
 }
 
 .logoDiv img {
-  width:200px;
-  height:200px;
+  width: 200px;
+  height: 200px;
 }
 
 .login-title {
@@ -90,16 +90,17 @@ body {
 .field {
   width: 100%;
   position: relative;
-
   margin: 0 auto;
   margin-bottom: 40px;
   border-bottom: 1px solid #ccc;
 }
+
 .icon {
   position: relative;
   font-size: 22px !important;
   padding: 10px;
 }
+
 input {
   display: inline-block;
   font-size: 18px;
@@ -108,7 +109,7 @@ input {
   background: transparent;
 }
 
-input ~ .focus-border {
+input~.focus-border {
   position: absolute;
   bottom: -2px;
   left: 0;
@@ -116,17 +117,12 @@ input ~ .focus-border {
   height: 2px;
   background: #21d4fd;
   background: -moz-linear-gradient(left, #21d4fd 1%, #647ee5 51%, #b721ff 100%);
-  background: -webkit-linear-gradient(
-    left,
-    #21d4fd 1%,
-    #647ee5 51%,
-    #b721ff 100%
-  );
+  background: -webkit-linear-gradient( left, #21d4fd 1%, #647ee5 51%, #b721ff 100%);
   background: linear-gradient(to right, #21d4fd 1%, #647ee5 51%, #b721ff 100%);
   transition: 0.4s;
 }
 
-input:focus ~ .focus-border {
+input:focus~.focus-border {
   width: 100%;
   transition: 0.4s;
 }
@@ -141,12 +137,7 @@ input:focus ~ .focus-border {
   transition: 0.5s;
   background: #21d4fd;
   background: -moz-linear-gradient(left, #21d4fd 0%, #b721ff 51%, #21d4fd 100%);
-  background: -webkit-linear-gradient(
-    left,
-    #21d4fd 0%,
-    #b721ff 51%,
-    #21d4fd 100%
-  );
+  background: -webkit-linear-gradient( left, #21d4fd 0%, #b721ff 51%, #21d4fd 100%);
   background: linear-gradient(to right, #21d4fd 0%, #b721ff 51%, #21d4fd 100%);
   background-size: 200% auto;
   margin-bottom: 50px;
@@ -170,13 +161,12 @@ input:focus ~ .focus-border {
 
 @media (max-width: 576px) {
   .wrap {
-    padding:15px;
+    padding: 15px;
   }
   .login-title {
     font-size: 25px;
   }
-
-  .logoDiv{
+  .logoDiv {
     margin-bottom: 20px;
   }
   .container {
@@ -187,10 +177,14 @@ input:focus ~ .focus-border {
 
 @media (max-height:650px) {
   .container {
-     padding: 15px 30px 10px 30px;
-     width:450px;
+    padding: 15px 30px 10px 30px;
+    width: 450px;
   }
   .logoDiv {
     margin-bottom: 20px;
+  }
+  .logoDiv img {
+    width: 150px;
+    height: 150px;
   }
 }
